@@ -1,6 +1,7 @@
 package org.openmetadata.service.resources.apis;
 
 import static jakarta.ws.rs.core.Response.Status.BAD_REQUEST;
+import static jakarta.ws.rs.core.Response.Status.OK;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
@@ -11,10 +12,13 @@ import static org.openmetadata.service.util.EntityUtil.fieldAdded;
 import static org.openmetadata.service.util.EntityUtil.fieldDeleted;
 import static org.openmetadata.service.util.EntityUtil.fieldUpdated;
 import static org.openmetadata.service.util.TestUtils.ADMIN_AUTH_HEADERS;
+import static org.openmetadata.service.util.TestUtils.INGESTION_BOT_AUTH_HEADERS;
 import static org.openmetadata.service.util.TestUtils.UpdateType.MINOR_UPDATE;
 import static org.openmetadata.service.util.TestUtils.assertListNotNull;
 import static org.openmetadata.service.util.TestUtils.assertListNull;
 import static org.openmetadata.service.util.TestUtils.assertResponse;
+import static org.openmetadata.service.util.TestUtils.compareTagsIgnoringOrder;
+import static org.openmetadata.service.util.TestUtils.isTagsSuperSet;
 import static org.openmetadata.service.util.TestUtils.validateEntityReference;
 
 import jakarta.ws.rs.client.WebTarget;
@@ -40,16 +44,19 @@ import org.openmetadata.schema.api.data.CreateAPIEndpoint;
 import org.openmetadata.schema.entity.data.APIEndpoint;
 import org.openmetadata.schema.type.APIRequestMethod;
 import org.openmetadata.schema.type.APISchema;
+import org.openmetadata.schema.type.ApiStatus;
 import org.openmetadata.schema.type.ChangeDescription;
 import org.openmetadata.schema.type.EntityReference;
 import org.openmetadata.schema.type.Field;
 import org.openmetadata.schema.type.FieldDataType;
 import org.openmetadata.schema.type.TagLabel;
+import org.openmetadata.schema.type.api.BulkOperationResult;
 import org.openmetadata.schema.utils.JsonUtils;
+import org.openmetadata.schema.utils.ResultList;
 import org.openmetadata.service.Entity;
 import org.openmetadata.service.resources.EntityResourceTest;
+import org.openmetadata.service.util.EntityUtil;
 import org.openmetadata.service.util.FullyQualifiedName;
-import org.openmetadata.service.util.ResultList;
 import org.openmetadata.service.util.TestUtils;
 
 @TestMethodOrder(MethodOrderer.OrderAnnotation.class)
@@ -194,22 +201,24 @@ public class APIEndpointResourceTest extends EntityResourceTest<APIEndpoint, Cre
     patchEntity(endpoint.getId(), endpointJson, endpoint, ADMIN_AUTH_HEADERS);
     endpoint = getAPIEndpoint(apiEndpoint.getId(), "tags", ADMIN_AUTH_HEADERS);
     fields = endpoint.getResponseSchema().getSchemaFields();
-    List<TagLabel> tags = fields.get(0).getTags();
-    for (TagLabel tag : tags) {
-      assertTrue(tag.equals(PERSONAL_DATA_TAG_LABEL) || tag.equals(PII_SENSITIVE_TAG_LABEL));
-    }
+    List<TagLabel> tags = fields.getFirst().getTags();
+
+    assertTrue(isTagsSuperSet(tags, List.of(PERSONAL_DATA_TAG_LABEL, PII_SENSITIVE_TAG_LABEL)));
+
     endpointJson = JsonUtils.pojoToJson(endpoint);
     fields = endpoint.getResponseSchema().getSchemaFields();
-    fields.get(0).getTags().remove(PERSONAL_DATA_TAG_LABEL);
+    fields
+        .getFirst()
+        .getTags()
+        .removeIf(tag -> EntityUtil.tagLabelMatch.test(tag, PERSONAL_DATA_TAG_LABEL));
     endpoint.getResponseSchema().setSchemaFields(fields);
     patchEntity(endpoint.getId(), endpointJson, endpoint, ADMIN_AUTH_HEADERS);
     endpoint = getAPIEndpoint(apiEndpoint.getId(), "tags", ADMIN_AUTH_HEADERS);
     fields = endpoint.getResponseSchema().getSchemaFields();
     tags = fields.get(0).getTags();
     assertEquals(1, tags.size());
-    for (TagLabel tag : tags) {
-      assertEquals(tag, PII_SENSITIVE_TAG_LABEL);
-    }
+
+    assertTrue(isTagsSuperSet(tags, List.of(PII_SENSITIVE_TAG_LABEL)));
 
     // add 2 new tags
     endpoint = getAPIEndpoint(apiEndpoint.getId(), "tags", ADMIN_AUTH_HEADERS);
@@ -222,26 +231,26 @@ public class APIEndpointResourceTest extends EntityResourceTest<APIEndpoint, Cre
     fields = endpoint.getResponseSchema().getSchemaFields();
     tags = fields.get(0).getTags();
     assertEquals(3, tags.size());
-    for (TagLabel tag : tags) {
-      assertTrue(
-          tag.equals(PERSONAL_DATA_TAG_LABEL)
-              || tag.equals(PII_SENSITIVE_TAG_LABEL)
-              || tag.equals(USER_ADDRESS_TAG_LABEL));
-    }
+    assertTrue(
+        compareTagsIgnoringOrder(
+            tags,
+            List.of(PERSONAL_DATA_TAG_LABEL, PII_SENSITIVE_TAG_LABEL, USER_ADDRESS_TAG_LABEL)));
 
     // remove 1 tag
     endpoint = getAPIEndpoint(apiEndpoint.getId(), "tags", ADMIN_AUTH_HEADERS);
     endpointJson = JsonUtils.pojoToJson(endpoint);
     fields = endpoint.getResponseSchema().getSchemaFields();
-    fields.get(0).getTags().remove(PERSONAL_DATA_TAG_LABEL);
+    fields
+        .getFirst()
+        .getTags()
+        .removeIf(tag -> EntityUtil.tagLabelMatch.test(tag, PERSONAL_DATA_TAG_LABEL));
     patchEntity(endpoint.getId(), endpointJson, endpoint, ADMIN_AUTH_HEADERS);
     endpoint = getAPIEndpoint(apiEndpoint.getId(), "tags", ADMIN_AUTH_HEADERS);
     fields = endpoint.getResponseSchema().getSchemaFields();
-    tags = fields.get(0).getTags();
+    tags = fields.getFirst().getTags();
     assertEquals(2, tags.size());
-    for (TagLabel tag : tags) {
-      assertTrue(tag.equals(PII_SENSITIVE_TAG_LABEL) || tag.equals(USER_ADDRESS_TAG_LABEL));
-    }
+    compareTagsIgnoringOrder(tags, List.of(PERSONAL_DATA_TAG_LABEL, USER_ADDRESS_TAG_LABEL));
+
     endpoint = getAPIEndpoint(apiEndpoint.getId(), "tags", ADMIN_AUTH_HEADERS);
     endpointJson = JsonUtils.pojoToJson(endpoint);
     endpoint.setRequestSchema(RESPONSE_SCHEMA);
@@ -257,16 +266,26 @@ public class APIEndpointResourceTest extends EntityResourceTest<APIEndpoint, Cre
     endpointJson = JsonUtils.pojoToJson(endpoint);
     requestFields = endpoint.getRequestSchema().getSchemaFields();
     fields = endpoint.getResponseSchema().getSchemaFields();
-    requestFields.get(0).getTags().remove(PII_SENSITIVE_TAG_LABEL);
-    fields.get(0).getTags().remove(USER_ADDRESS_TAG_LABEL);
+    requestFields
+        .getFirst()
+        .getTags()
+        .removeIf(tag -> EntityUtil.tagLabelMatch.test(tag, PII_SENSITIVE_TAG_LABEL));
+    fields
+        .getFirst()
+        .getTags()
+        .removeIf(tag -> EntityUtil.tagLabelMatch.test(tag, USER_ADDRESS_TAG_LABEL));
     patchEntity(endpoint.getId(), endpointJson, endpoint, ADMIN_AUTH_HEADERS);
     endpoint = getAPIEndpoint(apiEndpoint.getId(), "tags", ADMIN_AUTH_HEADERS);
     requestFields = endpoint.getRequestSchema().getSchemaFields();
     fields = endpoint.getResponseSchema().getSchemaFields();
     assertEquals(1, requestFields.get(0).getTags().size());
     assertEquals(1, fields.get(0).getTags().size());
-    assertEquals(USER_ADDRESS_TAG_LABEL, requestFields.get(0).getTags().get(0));
-    assertEquals(PII_SENSITIVE_TAG_LABEL, fields.get(0).getTags().get(0));
+    assertTrue(
+        EntityUtil.tagLabelMatch.test(
+            requestFields.getFirst().getTags().getFirst(), USER_ADDRESS_TAG_LABEL));
+    assertTrue(
+        EntityUtil.tagLabelMatch.test(
+            fields.getFirst().getTags().getFirst(), PII_SENSITIVE_TAG_LABEL));
   }
 
   @Override
@@ -545,5 +564,92 @@ public class APIEndpointResourceTest extends EntityResourceTest<APIEndpoint, Cre
           responseField2.getTags() == null || responseField2.getTags().isEmpty(),
           "responseField2 should not have tags");
     }
+  }
+
+  @Test
+  void testBulk_PreservesUserEditsOnUpdate(TestInfo test) throws IOException {
+    CreateAPIEndpoint botCreate =
+        createRequest(test.getDisplayName())
+            .withDescription("Bot initial description")
+            .withTags(List.of(USER_ADDRESS_TAG_LABEL));
+    APIEndpoint entity = createEntity(botCreate, INGESTION_BOT_AUTH_HEADERS);
+
+    CreateAPIEndpoint userUpdate =
+        createRequest(test.getDisplayName()).withDescription("User updated description");
+    WebTarget bulkTarget = getCollection().path("/bulk");
+    BulkOperationResult result =
+        TestUtils.put(
+            bulkTarget,
+            List.of(userUpdate),
+            BulkOperationResult.class,
+            OK,
+            INGESTION_BOT_AUTH_HEADERS);
+
+    assertEquals(ApiStatus.SUCCESS, result.getStatus());
+
+    APIEndpoint updated = getEntity(entity.getId(), ADMIN_AUTH_HEADERS);
+    assertEquals(
+        "Bot initial description",
+        updated.getDescription(),
+        "Bot should not be able to override non-empty user-edited description");
+
+    List<TagLabel> expectedTags = List.of(USER_ADDRESS_TAG_LABEL);
+    assertTrue(
+        isTagsSuperSet(updated.getTags(), expectedTags),
+        "Tags should be preserved from bot creation");
+  }
+
+  @Test
+  void testBulk_TagMergeBehavior(TestInfo test) throws IOException {
+    CreateAPIEndpoint initialCreate =
+        createRequest(test.getDisplayName()).withTags(List.of(USER_ADDRESS_TAG_LABEL));
+    APIEndpoint entity = createEntity(initialCreate, ADMIN_AUTH_HEADERS);
+    assertEquals(1, entity.getTags().size());
+    assertTrue(entity.getTags().contains(USER_ADDRESS_TAG_LABEL));
+
+    CreateAPIEndpoint updateWithNewTag =
+        createRequest(test.getDisplayName()).withTags(List.of(PERSONAL_DATA_TAG_LABEL));
+    WebTarget bulkTarget = getCollection().path("/bulk");
+    BulkOperationResult result =
+        TestUtils.put(
+            bulkTarget,
+            List.of(updateWithNewTag),
+            BulkOperationResult.class,
+            OK,
+            ADMIN_AUTH_HEADERS);
+
+    assertEquals(ApiStatus.SUCCESS, result.getStatus());
+
+    APIEndpoint updated = getEntity(entity.getId(), ADMIN_AUTH_HEADERS);
+    assertEquals(2, updated.getTags().size(), "Tags should be merged, not replaced");
+    assertTrue(
+        updated.getTags().stream()
+            .map(TagLabel::getTagFQN)
+            .collect(Collectors.toSet())
+            .containsAll(
+                List.of(USER_ADDRESS_TAG_LABEL.getTagFQN(), PERSONAL_DATA_TAG_LABEL.getTagFQN())),
+        "Both old and new tags should be present");
+  }
+
+  @Test
+  void testBulk_AdminCanOverrideDescription(TestInfo test) throws IOException {
+    CreateAPIEndpoint initialCreate =
+        createRequest(test.getDisplayName()).withDescription("Initial description");
+    APIEndpoint entity = createEntity(initialCreate, ADMIN_AUTH_HEADERS);
+
+    CreateAPIEndpoint adminUpdate =
+        createRequest(test.getDisplayName()).withDescription("Admin updated description");
+    WebTarget bulkTarget = getCollection().path("/bulk");
+    BulkOperationResult result =
+        TestUtils.put(
+            bulkTarget, List.of(adminUpdate), BulkOperationResult.class, OK, ADMIN_AUTH_HEADERS);
+
+    assertEquals(ApiStatus.SUCCESS, result.getStatus());
+
+    APIEndpoint updated = getEntity(entity.getId(), ADMIN_AUTH_HEADERS);
+    assertEquals(
+        "Admin updated description",
+        updated.getDescription(),
+        "Admin should be able to update description via bulk API");
   }
 }
